--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   unbound:
-    image: "mvance/unbound:1.18.0"
+    image: "mvance/unbound:1.20.0"
     container_name: unbound
     restart: unless-stopped
     hostname: "unbound"
@@ -8,12 +8,13 @@ services:
       - "./unbound:/opt/unbound/etc/unbound/"
     cap_add:
       - NET_ADMIN
+      - SYS_MODULE
     networks:
       xray:
         ipv4_address: 10.8.1.4
 
   xray:
-    image: "ghcr.io/xtls/xray-core:latest"
+    image: "ghcr.io/xtls/xray-core:1.8.23"
     container_name: xray
     volumes:
       - "./xray:/etc/xray"
@@ -33,7 +34,7 @@ services:
         ipv4_address: 10.8.1.2
 
   pihole:
-    image: "pihole/pihole:2023.02.2"
+    image: "pihole/pihole:2024.07.0"
     depends_on: [ unbound ]
     container_name: pihole
     hostname: pihole
@@ -47,7 +48,7 @@ services:
       ServerIP: 10.8.1.3
       DNS1: 10.8.1.4
       DNS2: 10.8.1.4
-      CACHE_SIZE: 0
+      CUSTOM_CACHE_SIZE: 0
     volumes:
       - '~/.pihole/etc-pihole:/etc/pihole'
       - './.pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
